--- a/APP/loginandpass.ui
+++ b/APP/loginandpass.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>LoginAndPass</string>
+   <string>Login</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QWidget" name="layoutWidget">
