--- a/APP/querymotos.ui
+++ b/APP/querymotos.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Consulta de Clientes</string>
+   <string>Consulta de Motos</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
