--- a/APP/querymanutecoes.ui
+++ b/APP/querymanutecoes.ui
@@ -13,8 +13,8 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+  <layout class="QVBoxLayout" name="verticalLayout_4">
+   <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <layout class="QVBoxLayout" name="verticalLayout">
@@ -53,11 +53,11 @@
      </item>
     </layout>
    </item>
-   <item row="1" column="0">
+   <item>
+    <widget class="QTableWidget" name="tableWidget"/>
+   </item>
+   <item>
     <layout class="QVBoxLayout" name="verticalLayout_3">
-     <item>
-      <widget class="QListWidget" name="listWidget"/>
-     </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
