--- a/APP/querymanutecoes.ui
+++ b/APP/querymanutecoes.ui
@@ -6,9 +6,27 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1061</width>
-    <height>621</height>
+    <width>900</width>
+    <height>600</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>900</width>
+    <height>600</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>900</width>
+    <height>600</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -75,6 +93,12 @@
        </item>
        <item>
         <widget class="QPushButton" name="btn_add">
+         <property name="maximumSize">
+          <size>
+           <width>900</width>
+           <height>600</height>
+          </size>
+         </property>
          <property name="text">
           <string>Adicionar</string>
          </property>
