--- a/APP/create_manutencao.ui
+++ b/APP/create_manutencao.ui
@@ -31,7 +31,7 @@
   <property name="windowTitle">
    <string>Nova Manutecao</string>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>150</x>
@@ -55,7 +55,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QLineEdit" name="lineEdit"/>
+           <widget class="QLineEdit" name="line_id_moto"/>
           </item>
          </layout>
         </item>
@@ -69,7 +69,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QLineEdit" name="lineEdit_3"/>
+           <widget class="QLineEdit" name="line_placa"/>
           </item>
          </layout>
         </item>
@@ -83,7 +83,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QComboBox" name="comboBox">
+           <widget class="QComboBox" name="combo_tipo_manuntecao">
             <item>
              <property name="text">
               <string>Troca de Oleo</string>
@@ -142,7 +142,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QLineEdit" name="lineEdit_4"/>
+           <widget class="QLineEdit" name="line_valor"/>
           </item>
          </layout>
         </item>
@@ -156,7 +156,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QDateEdit" name="dateEdit"/>
+           <widget class="QDateEdit" name="date_manuntecao"/>
           </item>
          </layout>
         </item>
@@ -170,7 +170,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QLineEdit" name="lineEdit_5"/>
+           <widget class="QLineEdit" name="line_km_atual"/>
           </item>
          </layout>
         </item>
@@ -186,7 +186,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="lineEdit_2"/>
+         <widget class="QLineEdit" name="line_observacao"/>
         </item>
        </layout>
       </item>
@@ -208,7 +208,7 @@
        </spacer>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="btn_salvar">
         <property name="text">
          <string>Salvar</string>
         </property>
