Foi criado a funcao de Editar a manuntecao e foi passada o valor do id da moto para line_id da outra tela

--- a/APP/querymanutecoes.ui
+++ b/APP/querymanutecoes.ui
@@ -92,6 +92,13 @@
         </spacer>
        </item>
        <item>
+        <widget class="QPushButton" name="btn_editar">
+         <property name="text">
+          <string>Editar</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QPushButton" name="btn_add">
          <property name="maximumSize">
           <size>
