--- a/APP/querymanutecoes.ui
+++ b/APP/querymanutecoes.ui
@@ -29,7 +29,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Consultar Manutecao</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_4">
    <item>
